--- a/css/sponser.css
+++ b/css/sponser.css
@@ -271,7 +271,7 @@
     {
     display: flex;
     padding: 1rem;
-    justify-content: space-between !important;
+    justify-content: space-around !important;
     flex-wrap:wrap;
     align-content: space-between;
     margin-left:3.5rem;
@@ -282,6 +282,7 @@
     .tag{
      padding-top: 5rem;
      padding-left: 45rem;
+     padding-right: 45rem;
     }
     .sponseritem{
     
