--- a/css/Navbar.css
+++ b/css/Navbar.css
@@ -170,11 +170,8 @@ footer{
     text-align: center;
    text-transform: capitalize;
    width: 100%;
-   top: 100%;
-   margin-top: 100%;
-   position: absolute;
-   padding-top: 10px;
-   padding-bottom: 20px; 
-   bottom: 0%;
+   top: 110%;
+   /* margin-top: 100%; */
+   bottom: 0px;
    z-index: -100;
   } 
