--- a/css/Navbar.css
+++ b/css/Navbar.css
@@ -7,7 +7,7 @@
   font-family: 'Montserrat', sans-serif;
 }
 nav{
-  position: sticky;
+  position: fixed           !important;
   background: #902724;
   padding: 10px 20px 10px 70px;
   border: 2px solid #902724;
@@ -16,7 +16,7 @@ nav{
   position: sticky;
   height: 90px;
   width: 100%;
-  
+   top:0;
 }
 
 .logo{
@@ -122,7 +122,7 @@ nav ul li.btn span.show:before{
   }
   nav ul div.items{
     z-index: -1;
-    position: fixed;
+    /* position: fixed; */
     top: -342px;
     right: 0;
     width: 100%;
@@ -171,7 +171,6 @@ footer{
    text-transform: capitalize;
    width: 100%;
    top: 110%;
-   /* margin-top: 100%; */
    bottom: 0px;
    z-index: -100;
   } 
