--- a/css/Navbar.css
+++ b/css/Navbar.css
@@ -7,19 +7,22 @@
   font-family: 'Montserrat', sans-serif;
 }
 nav{
-  position: fixed           !important;
+  position: fixed;
+  top: 0;
   background: #902724;
   padding: 10px 20px 10px 70px;
   border: 2px solid #902724;
   border-left: none;
   border-right: none;
-  position: sticky;
   height: 90px;
   width: 100%;
-   top:0;
+  top:0;
+  z-index: 100;
+  
 }
 
 .logo{
+  margin-top: -2rem;
   z-index: -500;
 }
 
@@ -28,7 +31,7 @@ nav ul{
   list-style: none;
   flex-wrap: wrap;
   justify-content: right;
-  margin-top: 30px;
+  margin-top: 20px;
   
 }
 .LOGO {
@@ -73,6 +76,7 @@ nav ul li.btn span.show:before{
 #hero{
   height: 650px;
   width: 100%;
+  margin-top: 8rem;
 }
 
 @media screen and (max-width: 1052px) {
@@ -122,7 +126,7 @@ nav ul li.btn span.show:before{
   }
   nav ul div.items{
     z-index: -1;
-    /* position: fixed; */
+    position: fixed;
     top: -342px;
     right: 0;
     width: 100%;
@@ -147,7 +151,7 @@ nav ul li.btn span.show:before{
     font-size: 19px;
   }
 }
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 405px) {
   nav ul{
     flex-wrap: nowrap;
   }
@@ -170,7 +174,8 @@ footer{
     text-align: center;
    text-transform: capitalize;
    width: 100%;
-   top: 110%;
    bottom: 0px;
+   padding-top: 10px;
+   padding-top: 20px;
    z-index: -100;
   } 
