--- a/css/OCstyles.css
+++ b/css/OCstyles.css
@@ -58,9 +58,9 @@
     transform: translate(-50%, 0); /* Center it horizontally without vertical offset */
     text-align: center; /* Maintain center alignment */
     color: #ffffff; /* Adjust text color for contrast */
-   /* font-size: 3rem; /* Adjust font size as needed */
-    font-size: 6px;
-    font-weight: bold;
+    /* size: 3rem; /* Adjust font size as needed */
+    font-size: 7rem;
+    font-weight: bold; 
   
 }
 .wrapper i {
@@ -142,13 +142,13 @@
 }
 .carousel .card h2 {
   font-weight: 500;
-  font-size: 2.5rem;
+  font-size: 1.56rem;
   margin: 30px 0 5px;
   color: #0d5c83;
 }
 .carousel .card span {
   color: #0d5c83;
-  font-size: 1.45rem;
+  font-size: 1.31rem;
 }
 
 @media screen and (max-width: 900px) {
