--- a/css/Navbar.css
+++ b/css/Navbar.css
@@ -31,7 +31,7 @@ nav ul{
   list-style: none;
   flex-wrap: wrap;
   justify-content: right;
-  margin-top: 20--px;
+  margin-top: 20px;
   
 }
 .LOGO {
