--- a/css/Navbar.css
+++ b/css/Navbar.css
@@ -6,6 +6,14 @@
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
 }
+html{
+  scroll-behavior: smooth;
+}
+
+.container{
+      z-index: 10; 
+}
+
 nav{
   position: fixed;
   top: 0;
