--- a/css/Event.css
+++ b/css/Event.css
@@ -17,7 +17,7 @@ html{
 }
 
 body{
-   background: #6d1f1c;
+   background: #f63800;
    /* background-image: url("/public/eventDetails/4824751.jpg"); */
    background-size:cover;
 }
