--- a/css/Event.css
+++ b/css/Event.css
@@ -17,7 +17,7 @@ html{
 }
 
 body{
-   background: #f63800;
+   background: #01adc1;
    /* background-image: url("/public/eventDetails/4824751.jpg"); */
    background-size:cover;
 }
