--- a/css/OCstyles.css
+++ b/css/OCstyles.css
@@ -12,7 +12,8 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background: linear-gradient(to left top, #1a32e1, #f23c27);
+  background-color: #01adc1;
+  /* background: linear-gradient(to left top, #1a32e1, #f23c27); */
 }
 .wrapper {
   max-width: 1300px;
@@ -121,7 +122,7 @@
   scroll-snap-align: start;
   height: 342px;
   list-style: none;
-  background: #f7d281;
+  background: #f4b602;
   cursor: pointer;
   padding-bottom: 15px;
   flex-direction: column;
@@ -144,10 +145,10 @@
   font-weight: 500;
   font-size: 2.5rem;
   margin: 30px 0 5px;
-  color: #0d5c83;
+  color: black;
 }
 .carousel .card span {
-  color: #0d5c83;
+  color: #01adc1;
   font-size: 1.49rem;
 }
 
