--- a/css/Navbar.css
+++ b/css/Navbar.css
@@ -17,7 +17,7 @@ html{
 nav{
   position: fixed;
   top: 0;
-  background: #ee0401;
+  /* background: #ee0401; */
   padding: 10px 20px 10px 70px;
   border: 2px solid #ee0401;
   border-left: none;
@@ -131,6 +131,7 @@ nav ul li.btn span.show:before{
   nav{
     z-index: 1;
     padding: 0px 40px 9px 0px;
+    background: rgba(0,0,0,0.2);
   }
   nav ul div.items{
     z-index: -1;
@@ -169,6 +170,7 @@ nav ul li.btn span.show:before{
   }
   #hero{
     height: 400px;
+    margin-top: 92px;
   }
 }
 
