--- a/css/OCstyles.css
+++ b/css/OCstyles.css
@@ -6,6 +6,12 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+#OC{
+  background: #01adc1;
+  width: 100%;
+  padding: 10px 20px 10px 0px;
+}
+
 .organizingCommittee {
   display: flex;
   padding: 0 35px;
