--- a/css/Navbar.css
+++ b/css/Navbar.css
@@ -19,7 +19,7 @@ nav{
   top: 0;
   /* background: #ee0401; */
   padding: 10px 20px 10px 70px;
-  border: 2px solid #ee0401;
+  /* border: 2px solid #ee0401; */
   border-left: none;
   border-right: none;
   height: 90px;
@@ -85,6 +85,7 @@ nav ul li.btn span.show:before{
   height: 650px;
   width: 100%;
   margin-top: 8rem;
+  margin-bottom: 0%;
 }
 
 @media screen and (max-width: 1052px) {
