--- a/css/Navbar.css
+++ b/css/Navbar.css
@@ -17,7 +17,7 @@ html{
 nav{
   position: fixed;
   top: 0;
-  /* background: #ee0401; */
+  background: #ee0401;
   padding: 10px 20px 10px 70px;
   /* border: 2px solid #ee0401; */
   border-left: none;
