--- a/css/sponser.css
+++ b/css/sponser.css
@@ -61,7 +61,7 @@
       font-weight: bold;
       text-align: center;
       padding: 4rem;
-      padding-top: 20rem;
+      /* padding-top: 20rem; */
       padding: right 10rem; 
       font-size: 2rem;
       
@@ -106,11 +106,11 @@
   }
   .sponser{
     position: static;
-    padding-top: 25%;
+    /* padding-top: 25%; */
   }
-  .tag{
+  /* .tag{
     padding-top: 3rem;
-  }
+  } */
   }
 
   @media screen and (min-width:1000px) and (max-width:1400px){
@@ -281,7 +281,7 @@
     margin-left:3.5rem;
     }
     .sponser{
-      padding-top: 25%;
+      padding-top: 2%;
     }
     .tag{
      padding-top: 5rem;
@@ -328,4 +328,8 @@
   #sponsor{
     width: 100%;
     background-color:#f4b602;
+  }
+
+  *{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif     !important;
   }
