--- a/css/Event.css
+++ b/css/Event.css
@@ -348,16 +348,36 @@ p{
       flex-basis: 100%;
    }
    #Events{
-      background-color: #27ae60;
+      background-color: #f4b602;;
       padding-bottom: 25%;
    }
 }
 
 #Events{
-   background-color: #27ae60;
+   background-color: #f4b602;;
    padding-bottom: 25%;
 }
 
 body{
-   background-color: #27ae60;
+   background-color: #f4b602;;
+}
+
+.ctfimg{
+   /* width: 100%; */
+    margin-left : -10px; 
+   margin-right: -100px; 
+   padding-right: 10px;
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+}
+.debugimg{
+   width: 120%;
+   margin-left: -10px;
+}
+ .buzzimg{
+   justify-content: center;
+} 
+.circuitlogo{
+   width: 100%;
 }
