--- a/css/sponser.css
+++ b/css/sponser.css
@@ -330,6 +330,6 @@
     background-color:#f4b602;
   }
 
-  *{
+  .sponser{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif     !important;
   }
