--- a/css/Navbar.css
+++ b/css/Navbar.css
@@ -75,7 +75,7 @@ nav ul li.btn span{
   width: 42px;
   text-align: center;
   line-height: 38px;
- 
+  padding-left: 110px;
   cursor: pointer;
 }
 nav ul li.btn span.show:before{
