--- a/css/Navbar.css
+++ b/css/Navbar.css
@@ -82,7 +82,7 @@ nav ul li.btn span.show:before{
   content: '\f00d';
 }
 #hero{
-  height: 650px;
+  /* height: 650px; */
   width: 100%;
   margin-top: 8rem;
   margin-bottom: 0%;
@@ -99,9 +99,9 @@ nav ul li.btn span.show:before{
     flex: 5;
     justify-content: right;
   }
-  #hero{
+  /* #hero{
     height:100%;
-  }
+  } */
 }
 @media screen and (max-width: 960px){
   nav ul li.logo{
@@ -115,9 +115,9 @@ nav ul li.btn span.show:before{
     padding: 0;
     margin: 5px 0;
   }
-  #hero{
+  /* #hero{
     height: auto;
-  }
+  } */
 }
 
 @media screen and (max-width: 800px){
@@ -169,9 +169,13 @@ nav ul li.btn span.show:before{
   nav ul li input{
     width: 40vmin;
   }
-  #hero{
-    height: 400px;
+  #hero img{
+
     margin-top: 92px;
+ 
+    /* object-fit: fill;
+    height: 200px;
+    width: 100%; */
   }
 }
 
@@ -190,3 +194,8 @@ footer{
    padding-top: 20px;
    z-index: -100;
   } 
+  @media screen and (min-width: 800px){
+    img{
+      height: 650px;
+    }
+  }
